After an evaluation, GNOME has moved from Bugzilla to GitLab. Learn more about GitLab.
No new issues can be reported in GNOME Bugzilla anymore.
To report an issue in a GNOME project, go to GNOME GitLab.
Do not go to GNOME Gitlab for: Bluefish, Doxygen, GnuCash, GStreamer, java-gnome, LDTP, NetworkManager, Tomboy.
Bug 732716 - rademux: Print invalid fourcc in error message in hex
rademux: Print invalid fourcc in error message in hex
Status: RESOLVED FIXED
Product: GStreamer
Classification: Platform
Component: gst-plugins-ugly
git master
Other All
: Normal minor
: 1.3.91
Assigned To: GStreamer Maintainers
GStreamer Maintainers
Depends on:
Blocks:
 
 
Reported: 2014-07-04 02:17 UTC by Sebastian Rasmussen
Modified: 2014-07-04 12:57 UTC
See Also:
GNOME target: ---
GNOME version: ---


Attachments
Proposed patch. (1.04 KB, patch)
2014-07-04 02:17 UTC, Sebastian Rasmussen
committed Details | Review

Description Sebastian Rasmussen 2014-07-04 02:17:03 UTC
Inspired by the bugs I found in
https://bugzilla.gnome.org/show_bug.cgi?id=732697 I looked for further
omissions and found them in rademux.
Comment 1 Sebastian Rasmussen 2014-07-04 02:17:31 UTC
Created attachment 279876 [details] [review]
Proposed patch.
Comment 2 Tim-Philipp Müller 2014-07-04 07:42:10 UTC
Thanks:

commit e593ae2db6bf51345aebd71782b15c1dfc23f59c
Author: Sebastian Rasmussen <sebras@hotmail.com>
Date:   Fri Jul 4 03:22:00 2014 +0200

    rademux: Print invalid fourcc in error message in hex
    
    Previously this was printed as characters which caused later processing
    of the error message to sometimes warn about non-UTF-8 characters.
    
    Fixes https://bugzilla.gnome.org/show_bug.cgi?id=732716